# CHIMERA_Cognitive_Architecture

./: .gitignore  README.md  RUN.sh  SALVAGE.md  chimera.env.example  pyproject.toml  requirements.txt  run.py  run_chimera.sh
chimera/: __init__.py  main_interactive.py  run_collective.py  run_complete_with_ui.py  run_full_system.py
chimera/agency/: curiosity_system.py
chimera/collective/: mesh_network.py  server.py
chimera/communication/: attention_protocol.py
chimera/core/: base.py  council.py  embodied_chimera.py  message_bus.py
chimera_core/: __init__.py
docs/: LOCAL_MODEL_SETUP.md  NEO4J_SETUP.md  README.md  TERMUX_SETUP.md
examples/: FeedbackEngine.md  analyze_chimera_data.py  archive_manager.py  chimera-v06-complete.py  chimera-v07-cognitive.py  chimera_complete.py  chimera_full_sensors.py  chimera_lite.py  chimera_lite_fixed.py  chimera_s24.py  chimera_s24_clean.py  crystal_001.json  crystallization_agent.py  crystallized_insight.json  embodied_chimera.py  embodied_s24_garmin.py  find_garmin_data.py  garmin_integration.py  glyph-resonance-precedes-form.json  glyph_generator.py  int_sensor_test.py  monitor_garmin.py  sensor_dashboard.py  sensor_test.py  test_all_sensors.py  test_garmin.py  test_sensor_read.py  test_setup.py
mobile/: Dockerfile.mobile  buildozer.spec
scripts/: build_unified.py  collective_demo.py  integrate_universal_ethics.py  setup_termux.sh
tests/: test_collective.py  test_embodiment.py  test_graph_brain.py  test_local_collective.py  test_local_llm.py  test_smoke.py  test_termux_sensors.py
web/: app.py
(+48 files in other folders)
