[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-cognitive-architecture"
version = "0.2.0"
description = "An experimental multi-agent cognitive architecture that learns language organically through interaction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "The Fractality Institute" }]

dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "python-socketio[client]>=5.9.0",  # collective node client
    "websocket-client>=1.6.0",          # websocket transport for the client
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Heavier / not-yet-integrated subsystems. Install as those are revived.
extras = [
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["chimera_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
